# yolo-segmentator

./: AGENTS.md  Cargo.toml  README.md
src/: dataset.rs  gui.rs  main.rs  watcher.rs
